Use MemorySegment instead of byte[] in Connection